# memblock-ghcp

./: .gitignore  LICENSE  README.md  render.yaml
extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
extension/src/: extension.ts  memoryClient.ts  memoryEngine.ts  utils.test.ts  utils.ts
memory-engine/: .gitignore  Cargo.toml
memory-engine/src/: chunking.rs  embedding.rs  main.rs  retrieval.rs  routes.rs  storage.rs
